# ua_appointment_checker

./: .env  Dockerfile  README.md  compose.yml  pyproject.toml
ua_appointment_checker/: __main__.py  app.py  checker.py  constants.py  email.py  environment.py  registry.py
